# niffler-py-st3

./: .gitignore  .pre-commit-config.yaml  config.py  conftest.py  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  settings.toml
tests/data/: filters.py  strings.py
tests/src/: data_generators.py
tests/src/screens/: auth_screen.py  base_screen.py  register_screen.py
tests/tests_frontend/: conftest.py  test_auth.py  test_create_account.py
